--- a/Makefile.in
+++ b/Makefile.in
@@ -191,14 +191,13 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = \
-          third-party/gtest \
-          third-party/gmock \
+          third-party \
           third-party/uripp \
           libopccore \
           ua/libuamappings \
           ua/server
 
-EXTRA_DIST = configure.main
+EXTRA_DIST = third-party/gmock third-party/gtest configure.main
 all: all-recursive
 
 .SUFFIXES:
