--- a/ua/server/Makefile.in
+++ b/ua/server/Makefile.in
@@ -168,11 +168,12 @@ libuaclient_test_LDADD = $(LDADD)
 libuaclient_test_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(libuaclient_test_LDFLAGS) $(LDFLAGS) -o $@
-am__opcua_SOURCES_DIST = src/binary_connection.cpp src/computer.cpp \
-	src/endpoints.h src/opcua_main.cpp src/opcua_options.cpp \
-	src/opcua_options.h src/socket_channel.cpp \
-	src/stream_attribute.h src/stream_computer.h src/stream_view.h
-@BUILD_UA_CMD_TRUE@am_opcua_OBJECTS =  \
+am__opcua_SOURCES_DIST = src/binary_computer.cpp \
+	src/binary_connection.cpp src/computer.cpp src/endpoints.h \
+	src/opcua_main.cpp src/opcua_options.cpp src/opcua_options.h \
+	src/socket_channel.cpp src/stream_attribute.h \
+	src/stream_computer.h src/stream_view.h
+@BUILD_UA_CMD_TRUE@am_opcua_OBJECTS = opcua-binary_computer.$(OBJEXT) \
 @BUILD_UA_CMD_TRUE@	opcua-binary_connection.$(OBJEXT) \
 @BUILD_UA_CMD_TRUE@	opcua-computer.$(OBJEXT) \
 @BUILD_UA_CMD_TRUE@	opcua-opcua_main.$(OBJEXT) \
@@ -207,10 +208,11 @@ test_endpoints_addon_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
 	$(CXXFLAGS) $(test_endpoints_addon_LDFLAGS) $(LDFLAGS) -o $@
 am__test_opcuaserver_SOURCES_DIST = src/server/server_options.cpp \
-	src/thread.cpp tests/server/test_server_options.cpp \
-	tests/thread_test.cpp
+	src/thread.cpp tests/server/common.cpp tests/server/common.h \
+	tests/server/test_server_options.cpp tests/thread_test.cpp
 @BUILD_UA_SERVER_TRUE@am_test_opcuaserver_OBJECTS = test_opcuaserver-server_options.$(OBJEXT) \
 @BUILD_UA_SERVER_TRUE@	test_opcuaserver-thread.$(OBJEXT) \
+@BUILD_UA_SERVER_TRUE@	test_opcuaserver-common.$(OBJEXT) \
 @BUILD_UA_SERVER_TRUE@	test_opcuaserver-test_server_options.$(OBJEXT) \
 @BUILD_UA_SERVER_TRUE@	test_opcuaserver-thread_test.$(OBJEXT)
 test_opcuaserver_OBJECTS = $(am_test_opcuaserver_OBJECTS)
@@ -254,7 +256,8 @@ DIST_SOURCES = $(am__libbuiltin_computer_addon_la_SOURCES_DIST) \
 	$(am__test_opcuaserver_SOURCES_DIST)
 am__addonsinclude_HEADERS_DIST =  \
 	include/opc/ua/server/addons/tcp_server_addon.h \
-	include/opc/ua/server/addons/endpoints.h
+	include/opc/ua/server/addons/endpoints.h \
+	include/opc/ua/server/addons/builtin_computer.h
 am__uaserverinclude_HEADERS_DIST = include/opc/ua/server/server.h \
 	include/opc/ua/server/tcp_server.h
 HEADERS = $(addonsinclude_HEADERS) $(opcuainclude_HEADERS) \
@@ -424,6 +427,7 @@ opcuainclude_HEADERS = \
   include/opc/ua/view.h
 
 uaclientinclude_HEADERS = \
+  include/opc/ua/client/binary_computer.h \
   include/opc/ua/client/remote_computer.h \
   include/opc/ua/client/remote_connection.h
 
@@ -433,11 +437,14 @@ EXTRA_DIST = \
   src/endpoints.h \
   src/stream_computer.h \
   src/stream_attribute.h \
+  tests/configs/endpoints.xml \
   tests/configs/test.xml \
+  tests/configs/test_endpoints_config.xml \
   tests/configs/test_tcp_server.xml
 
 lib_LTLIBRARIES = $(am__append_4)
 @BUILD_UA_CMD_TRUE@opcua_SOURCES = \
+@BUILD_UA_CMD_TRUE@  src/binary_computer.cpp \
 @BUILD_UA_CMD_TRUE@  src/binary_connection.cpp \
 @BUILD_UA_CMD_TRUE@  src/computer.cpp \
 @BUILD_UA_CMD_TRUE@  src/endpoints.h \
@@ -475,7 +482,8 @@ lib_LTLIBRARIES = $(am__append_4)
 @BUILD_UA_SERVER_TRUE@opcuaserver_CPPFLAGS = $(INCLUDES)
 @BUILD_UA_SERVER_TRUE@opcuaserver_LDFLAGS = -lboost_program_options -lboost_thread -lpthread -ldl  $(UA_MAPPING_LIBS) $(URI_LIBS) $(OPC_CORE_LIBS) -no-undefined
 @BUILD_UA_SERVER_TRUE@addonsinclude_HEADERS = include/opc/ua/server/addons/tcp_server_addon.h \
-@BUILD_UA_SERVER_TRUE@	include/opc/ua/server/addons/endpoints.h
+@BUILD_UA_SERVER_TRUE@	include/opc/ua/server/addons/endpoints.h \
+@BUILD_UA_SERVER_TRUE@	include/opc/ua/server/addons/builtin_computer.h
 @BUILD_UA_SERVER_TRUE@libopcua_tcp_server_la_SOURCES = \
 @BUILD_UA_SERVER_TRUE@  src/server/tcp_server.cpp \
 @BUILD_UA_SERVER_TRUE@  src/server/tcp_server_addon.cpp \
@@ -521,6 +529,8 @@ libuaclient_test_LDFLAGS = -lpthread -Wl,-z,defs $(UA_MAPPING_LIBS)  $(GTEST_LIB
 @BUILD_UA_SERVER_TRUE@test_opcuaserver_SOURCES = \
 @BUILD_UA_SERVER_TRUE@  src/server/server_options.cpp \
 @BUILD_UA_SERVER_TRUE@  src/thread.cpp \
+@BUILD_UA_SERVER_TRUE@  tests/server/common.cpp \
+@BUILD_UA_SERVER_TRUE@  tests/server/common.h \
 @BUILD_UA_SERVER_TRUE@  tests/server/test_server_options.cpp \
 @BUILD_UA_SERVER_TRUE@  tests/thread_test.cpp
 
@@ -731,6 +741,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_session.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-computer_view.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libuaclient_test-socket_channel.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-binary_computer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-binary_connection.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-computer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/opcua-opcua_main.Po@am__quote@
@@ -743,6 +754,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_endpoints_addon-common.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_endpoints_addon-endpoints_addon_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_endpoints_addon-server_options.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-common.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-server_options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-test_server_options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/test_opcuaserver-thread.Po@am__quote@
@@ -937,6 +949,20 @@ libuaclient_test-computer_view.obj: tests/computer_view.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/computer_view.cpp' object='libuaclient_test-computer_view.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libuaclient_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libuaclient_test-computer_view.obj `if test -f 'tests/computer_view.cpp'; then $(CYGPATH_W) 'tests/computer_view.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/computer_view.cpp'; fi`
+
+opcua-binary_computer.o: src/binary_computer.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-binary_computer.o -MD -MP -MF $(DEPDIR)/opcua-binary_computer.Tpo -c -o opcua-binary_computer.o `test -f 'src/binary_computer.cpp' || echo '$(srcdir)/'`src/binary_computer.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-binary_computer.Tpo $(DEPDIR)/opcua-binary_computer.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/binary_computer.cpp' object='opcua-binary_computer.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-binary_computer.o `test -f 'src/binary_computer.cpp' || echo '$(srcdir)/'`src/binary_computer.cpp
+
+opcua-binary_computer.obj: src/binary_computer.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-binary_computer.obj -MD -MP -MF $(DEPDIR)/opcua-binary_computer.Tpo -c -o opcua-binary_computer.obj `if test -f 'src/binary_computer.cpp'; then $(CYGPATH_W) 'src/binary_computer.cpp'; else $(CYGPATH_W) '$(srcdir)/src/binary_computer.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/opcua-binary_computer.Tpo $(DEPDIR)/opcua-binary_computer.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/binary_computer.cpp' object='opcua-binary_computer.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o opcua-binary_computer.obj `if test -f 'src/binary_computer.cpp'; then $(CYGPATH_W) 'src/binary_computer.cpp'; else $(CYGPATH_W) '$(srcdir)/src/binary_computer.cpp'; fi`
 
 opcua-binary_connection.o: src/binary_connection.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opcua_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opcua-binary_connection.o -MD -MP -MF $(DEPDIR)/opcua-binary_connection.Tpo -c -o opcua-binary_connection.o `test -f 'src/binary_connection.cpp' || echo '$(srcdir)/'`src/binary_connection.cpp
@@ -1133,6 +1159,20 @@ test_opcuaserver-thread.obj: src/thread.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/thread.cpp' object='test_opcuaserver-thread.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-thread.obj `if test -f 'src/thread.cpp'; then $(CYGPATH_W) 'src/thread.cpp'; else $(CYGPATH_W) '$(srcdir)/src/thread.cpp'; fi`
+
+test_opcuaserver-common.o: tests/server/common.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-common.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-common.Tpo -c -o test_opcuaserver-common.o `test -f 'tests/server/common.cpp' || echo '$(srcdir)/'`tests/server/common.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-common.Tpo $(DEPDIR)/test_opcuaserver-common.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/server/common.cpp' object='test_opcuaserver-common.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-common.o `test -f 'tests/server/common.cpp' || echo '$(srcdir)/'`tests/server/common.cpp
+
+test_opcuaserver-common.obj: tests/server/common.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-common.obj -MD -MP -MF $(DEPDIR)/test_opcuaserver-common.Tpo -c -o test_opcuaserver-common.obj `if test -f 'tests/server/common.cpp'; then $(CYGPATH_W) 'tests/server/common.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/server/common.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/test_opcuaserver-common.Tpo $(DEPDIR)/test_opcuaserver-common.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='tests/server/common.cpp' object='test_opcuaserver-common.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o test_opcuaserver-common.obj `if test -f 'tests/server/common.cpp'; then $(CYGPATH_W) 'tests/server/common.cpp'; else $(CYGPATH_W) '$(srcdir)/tests/server/common.cpp'; fi`
 
 test_opcuaserver-test_server_options.o: tests/server/test_server_options.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(test_opcuaserver_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT test_opcuaserver-test_server_options.o -MD -MP -MF $(DEPDIR)/test_opcuaserver-test_server_options.Tpo -c -o test_opcuaserver-test_server_options.o `test -f 'tests/server/test_server_options.cpp' || echo '$(srcdir)/'`tests/server/test_server_options.cpp
